Add JavaFX binary search demo and supporting files
Introduced a new JavaFX-based binary search demonstration in 08-02-BinarySearch, including Makefile, Maven configuration, platform scripts, documentation, and multiple Java implementations (iterative, recursive, in-built, and test classes).